# labnirs2snirf

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  LICENSE  README.md  clean.bat  delete_fluff.bat  noxfile.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  extract_coverage.py
.github/actions/setup-python-env/: action.yml
.github/scripts/: extract_coverage.py
.github/workflows/: ci.yml  docs.yml  pr-precommit.yml  publish.yml  publish_pypi.yml  publish_testpypi.yml
data/test/: hb_only.txt  minimal_labnirs.txt  raw_only.txt  small_labnirs.txt
docs/: README.md  api.md  conf.py  generate_index.py  index.md  index.template  installation.md  script.md  usage.md
error_sample/: error.txt  layout.sfp
labnirs2snirf/: __init__.py  args.py  labnirs.py  labnirs2snirf.py  layout.py  log.py  model.py  snirf.py
tests/: conftest.py  raw_only.txt  test_args.py  test_labnirs.py  test_labnirs2snirf.py  test_layout.py  test_logging.py  test_snirf.py
tests/data/: minimal_labnirs.txt
