[project]
name = "labnirs2snirf"
version = "0.1.0"
description = "Converts exported Shimadzu LabNirs recordings to SNIRF format."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Tamas Fehervari", email = "58502181+zEdS15B3GCwq@users.noreply.github.com"}
]
keywords = ["shimadzu", "labnirs", "snirf", "nirs", "fNIRS", "neuroimaging", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "polars>=1.35.2",
    "h5py>=3.15.1",
    "numpy>=2.3.4",
]

[project.urls]
Homepage = "https://zeds15b3gcwq.github.io/labnirs2snirf/"
Repository = "https://github.com/zEdS15B3GCwq/labnirs2snirf"
Documentation = "https://zeds15b3gcwq.github.io/labnirs2snirf/"
"Bug Tracker" = "https://github.com/zEdS15B3GCwq/labnirs2snirf/issues"

[project.scripts]
labnirs2snirf = "labnirs2snirf.labnirs2snirf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nox>=2025.10.6",
    "pre-commit>=4.4.0",
]
