[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labnirs2snirf"
version = "0.1.0"
description = "Converts exported Shimadzu LabNirs recordings to SNIRF format."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Tamas Fehervari", email = "58502181+zEdS15B3GCwq@users.noreply.github.com"}
]
keywords = ["Shimadzu", "Labnirs", "SNIRF", "convert"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "polars>=1.35.2",
    "h5py>=3.15.1",
    "numpy>=2.3.5",
]

[project.urls]
Homepage = "https://github.com/zEdS15B3GCwq/labnirs2snirf"
Repository = "https://github.com/zEdS15B3GCwq/labnirs2snirf"

[tool.ruff]
target-version = "py314"
